code lines 29: testing button to center it to prevent overlapping of generated text.

--- a/style.css
+++ b/style.css
@@ -23,9 +23,10 @@ h1 {
 }
 #quoteMsg {
     line-height: 1.8;
-    text-align: right;
+    text-align: center;
 }
 button {
+    margin-top: 80px;
     background-color: linen;
     box-shadow: 2px 1px lightskyblue;
     border: 3px ridge white;
